--- a/theme/index.html
+++ b/theme/index.html
@@ -36,7 +36,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
   <link rel="canonical" href="https://www.europisosdemaderaydecks.com">
   <meta name="keywords" content="pisos de madera, decks, pérgolas, vigas de ingeniería, sintético, PVC, resina, resinas, mantenimiento, guadalajara, mexico, instalación">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<script src="/assets/external/netlify-identity-widget.js"></script><style>picture { border: 0;
@@ -164,7 +163,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="section-fibra-inicio wf-section">
     <div class="div-center espacio">
-      <div class="div-center vertical espacio-abajo">{%- image images.-284109df.url, images.-284109df.alt, '[{"max":479,"size":"100vw"},{"max":10000,"size":"450px"}]', 'width="403" height="237"' -%}
+      <div class="div-center vertical espacio-abajo">{%- image images.-284109df.url, images.-284109df.alt, '[{"max":479,"size":"100vw"},{"max":10000,"size":"403px"}]', 'width="403" height="237"' -%}
         <div class="div-box-small">
           <h3 class="h3">{{ texts.-35484607 }}</h3>
           <p class="paragraph dark medium center">{{ texts.-79b28347 }}</p>
@@ -179,7 +178,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <p class="paragraph center">{{ texts.-76e0009f }}</p>
       </div>
       <div class="div-50">
-        <div class="div-center">{%- image images.-3f932de.url, images.-3f932de.alt, '[{"max":479,"size":"92vw"},{"max":10000,"size":"278.390625px"}]', 'height="125" width="391"' -%}</div>
+        <div class="div-center">{%- image images.-3f932de.url, images.-3f932de.alt, '[{"max":411,"size":"95vw"},{"max":767,"size":"391px"},{"max":991,"size":"45vw"},{"max":10000,"size":"391px"}]', 'height="125" width="391"' -%}</div>
         <h3 class="h3">{{ texts.-42635e28 }}</h3>
         <p class="paragraph center">{{ texts.-1fff5a95 }}</p>
       </div>
