--- a/theme/mantenimiento.html
+++ b/theme/mantenimiento.html
@@ -34,7 +34,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
@@ -48,19 +47,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h3 class="heading-3 center">{{ texts.637742bb }}</h3>
       <p class="paragraph dark big center">{{ texts.-2cacca82 }}<br>{{ texts.7933fb7f }}</p>
       <a href="{{ links.16bdc17e }}" target="_blank" class="link-text big-underline">{{ texts.-5caaaf3e }}</a>
-      <div class="div-block top-bottom-space">{%- image images.348340a3.url, images.348340a3.alt, '[{"max":479,"size":"100vw"},{"max":10000,"size":"349.94793701171875px"}]', '' -%}
+      <div class="div-block top-bottom-space">{%- image images.348340a3.url, images.348340a3.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
         <h3 class="heading-3">{{ texts.569775fb }}</h3>
-        <p class="paragraph dark medium center">{{ texts.-d77a9a3 }}<a href="{{ links.-14926fb7 }}" target="_blank">{{ texts.25a2090d }}</a>{{ texts.76c9da9b }}</p>{%- image images.334acc7.url, images.334acc7.alt, '[{"max":767,"size":"100vw"},{"max":10000,"size":"626.9791870117188px"}]', '' -%}
+        <p class="paragraph dark medium center">{{ texts.-d77a9a3 }}<a href="{{ links.-14926fb7 }}" target="_blank">{{ texts.25a2090d }}</a>{{ texts.76c9da9b }}</p>{%- image images.334acc7.url, images.334acc7.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
       </div>
       <div class="div-block top-bottom-space">{%- image images.-4ddde07.url, images.-4ddde07.alt, '[{"max":479,"size":"100vw"},{"max":10000,"size":"300px"}]', 'width="300"' -%}
         <h3 class="heading-3">{{ texts.569775fb }}</h3>
         <p class="paragraph dark medium center">
-          <a href="{{ links.1cf32839 }}" target="_blank">{{ texts.1faee0 }}</a>{{ texts.-733bcf02 }}</p>{%- image images.-5ec91746.url, images.-5ec91746.alt, '[{"max":991,"size":"100vw"},{"max":10000,"size":"897.9688110351562px"}]', '' -%}
+          <a href="{{ links.1cf32839 }}" target="_blank">{{ texts.1faee0 }}</a>{{ texts.-733bcf02 }}</p>{%- image images.-5ec91746.url, images.-5ec91746.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
         <p class="paragraph dark medium center">{{ texts.7a7934e2 }}</p>
       </div>
       <div class="div-block top-bottom-space">
         <div class="div-block">
-          <h2 class="heading-2 center">{{ texts.593a3444 }}</h2>{%- image images.6f7e55a5.url, images.6f7e55a5.alt, '[{"max":767,"size":"100vw"},{"max":10000,"size":"637.951416015625px"}]', '' -%}
+          <h2 class="heading-2 center">{{ texts.593a3444 }}</h2>{%- image images.6f7e55a5.url, images.6f7e55a5.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
           <h3 class="heading-3">{{ texts.56d25100 }}</h3>
           <p class="paragraph dark medium center">{{ texts.-ebf2f9b }}</p>
         </div>
@@ -69,16 +68,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p class="paragraph dark medium center">{{ texts.-3c598279 }}</p>
           <p class="paragraph dark medium center">{{ texts.1ffffb2a }}</p>
           <p class="paragraph dark medium center">{{ texts.29e84868 }}</p>
-          <p class="paragraph dark medium center">{{ texts.-792be2fb }}</p>{%- image images.7e1226dc.url, images.7e1226dc.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
+          <p class="paragraph dark medium center">{{ texts.-792be2fb }}</p>{%- image images.7e1226dc.url, images.7e1226dc.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
         </div>
         <div class="div-block">
           <h3 class="heading-3">{{ texts.-334a6ac8 }}</h3>
           <p class="paragraph dark medium center">{{ texts.5dd24765 }}</p>
-          <p class="paragraph dark medium center">{{ texts.50b85b74 }}</p>{%- image images.7e1226dc.url, images.7e1226dc.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
-          <p class="paragraph dark medium center">{{ texts.514a688 }}</p>{%- image images.7e203e5d.url, images.7e203e5d.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
+          <p class="paragraph dark medium center">{{ texts.50b85b74 }}</p>{%- image images.7e1226dc.url, images.7e1226dc.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
+          <p class="paragraph dark medium center">{{ texts.514a688 }}</p>{%- image images.7e203e5d.url, images.7e203e5d.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
           <h3 class="heading-4">{{ texts.-4f6386de }}</h3>
-          <p class="paragraph dark medium center">{{ texts.-7fc272e9 }}</p>{%- image images.7e2e55de.url, images.7e2e55de.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
-          <p class="paragraph dark medium center">{{ texts.-1a9618d4 }}</p>{%- image images.7e2e55de.url, images.7e2e55de.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
+          <p class="paragraph dark medium center">{{ texts.-7fc272e9 }}</p>{%- image images.7e2e55de.url, images.7e2e55de.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
+          <p class="paragraph dark medium center">{{ texts.-1a9618d4 }}</p>{%- image images.7e2e55de.url, images.7e2e55de.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
         </div>
       </div>
     </div>
