--- a/theme/marcas.html
+++ b/theme/marcas.html
@@ -34,7 +34,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
   <meta name="keywords" content="marcas de maderas, marcas pisos de madera, marcas pergolas">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
@@ -46,7 +45,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="container w-container">
       <h1 class="heading-h1">{{ texts.3adae108 }}</h1>
       <h2 class="heading-2">{{ texts.29a48eba }}</h2>
-      <p class="paragraph dark medium">{{ texts.-1a80352a }}</p>{%- image images.13c4cbba.url, images.13c4cbba.alt, '[{"max":767,"size":"100vw"},{"max":991,"size":"95vw"},{"max":10000,"size":"903.9931030273438px"}]', '' -%}
+      <p class="paragraph dark medium">{{ texts.-1a80352a }}</p>{%- image images.13c4cbba.url, images.13c4cbba.alt, '[{"max":767,"size":"100vw"},{"max":991,"size":"728px"},{"max":10000,"size":"904px"}]', '' -%}
     </div>
   </div>
   {%- include "partials/footer" -%}
