--- a/theme/techos-y-cubiertas-para-pergolas.html
+++ b/theme/techos-y-cubiertas-para-pergolas.html
@@ -34,7 +34,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
   <meta name="keywords" content="techos y cubiertas para pergolas">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
@@ -42,7 +41,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         display: inline-block; }</style></head>
 <body>
   {%- include "partials/menu" -%}
-  <div id="decksdemadera" class="section-techos-y-cubiertas-pagina wf-section">{%- image images.2ebec603.url, images.2ebec603.alt, '[{"max":10000,"size":"160.98959350585938px"}]', 'width="161"' -%}
+  <div id="decksdemadera" class="section-techos-y-cubiertas-pagina wf-section">{%- image images.2ebec603.url, images.2ebec603.alt, '[{"max":10000,"size":"161px"}]', 'width="161"' -%}
     <div class="container-center w-container">
       <h1 class="heading-h1 center">{{ texts.-4e95ba90 }}</h1>
       <p class="paragraph dark big center">{{ texts.-63e9c0fa }}</p>
@@ -57,7 +56,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="imagen-boton-cuadrado-ixtle"></div>
       </a>
       <div class="div-center-vertical">
-        <h3 class="h3">{{ texts.6141cb0c }}</h3>
+        <h2 class="h3">{{ texts.-192cf145 }}</h2>
         <a target="_blank" href="{{ links.-68f8d38a }}" class="link-text big-underline">{{ texts.-39baa740 }}</a>
       </div>
     </div>
@@ -66,7 +65,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="imagen-boton-cuadrado-encapsulados"></div>
       </a>
       <div class="div-center-vertical">
-        <h3 class="h3">{{ texts.467dcb00 }}</h3>
+        <h2 class="h3">{{ texts.467dcb00 }}</h2>
         <a href="{{ links.4950878b }}" class="link-text big-underline">{{ texts.-39baa740 }}</a>
       </div>
     </div>
@@ -75,7 +74,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="imagen-boton-cuadrado-policarbonato"></div>
       </a>
       <div class="div-center-vertical">
-        <h3 class="h3">{{ texts.-5686ec5 }}</h3>
+        <h2 class="h3">{{ texts.-5686ec5 }}</h2>
         <a href="{{ links.-7ddf2970 }}" class="link-text big-underline">{{ texts.-39baa740 }}</a>
       </div>
     </div>
@@ -84,7 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="imagen-boton-cuadrado-vidrio"></div>
       </a>
       <div class="div-center-vertical">
-        <h3 class="h3">{{ texts.-14890b6b }}</h3>
+        <h2 class="h3">{{ texts.-14890b6b }}</h2>
         <a href="{{ links.-4ac55a22 }}" class="link-text big-underline">{{ texts.-39baa740 }}</a>
       </div>
     </div>
@@ -93,24 +92,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="imagen-boton-cuadrado-lona"></div>
       </a>
       <div class="div-center-vertical">
-        <h3 class="h3">{{ texts.6d2cb709 }}</h3>
+        <h2 class="h3">{{ texts.6d2cb709 }}</h2>
         <a href="{{ links.21ffd19 }}" class="link-text big-underline">{{ texts.-39baa740 }}</a>
       </div>
     </div>
   </div>
   <div id="encapsuladoixtle" class="section-ixtle wf-section">
     <div class="div-container">
-      <h2 class="heading-2 center">{{ texts.6141cb0c }}</h2>
+      <h2 class="heading-2 center">{{ texts.-192cf145 }}</h2>
       <div class="image-thumbnail-redondo ixtle"></div>
-      <p class="paragraph dark big center">{{ texts.7a9143cf }}</p>
-      <p class="paragraph dark medium center">{{ texts.-7ff8a081 }}</p>
+      <p class="paragraph dark big center">{{ texts.663a2957 }}</p>
+      <p class="paragraph dark medium center">{{ texts.77dd9e1d }}</p>
       <div class="div-galeria">
-        <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.-4958f2aa.url, images.-4958f2aa.alt, '[{"max":991,"size":"100vw"},{"max":10000,"size":"960.0000610351562px"}]', 'id="ventajasencapsulado" class="image"' -%}
-          <script type="application/json" class="w-json">{"items":[{"width":1000,"caption":"Techo de encapsulado FV de Ixtle","height":700,"fileName":"01-encapsuladofv-cubierta-de-ixtle.jpg","origFileName":"01-encapsuladofv-cubierta-de-ixtle.jpg","url":"/assets/images/01-encapsuladofv-cubierta-de-ixtle.jpg","_id":"5a5bfa2fa0eb5000019c94b6","type":"image","fileSize":138126},{"width":800,"caption":"Techo de encapsulado FV de Ixtle","height":660,"fileName":"02-encapsuladofv-cubierta-de-ixtle.jpg","origFileName":"02-encapsuladofv-cubierta-de-ixtle.jpg","url":"/assets/images/02-encapsuladofv-cubierta-de-ixtle.jpg","_id":"5a5bfa2f24d14a0001997690","type":"image","fileSize":90080}]}</script>
+        <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.-4958f2aa.url, images.-4958f2aa.alt, '[{"max":991,"size":"100vw"},{"max":10000,"size":"960px"}]', 'id="ventajasencapsulado" class="image"' -%}
+          <script type="application/json" class="w-json">{"items":[{"_id":"5a5bfa2fa0eb5000019c94b6","origFileName":"01-encapsuladofv-cubierta-de-ixtle.jpg","fileName":"01-encapsuladofv-cubierta-de-ixtle.jpg","fileSize":138126,"height":700,"url":"/assets/images/01-encapsuladofv-cubierta-de-ixtle.jpg","width":1000,"caption":"Techo de encapsulado FV de Ixtle","type":"image"},{"_id":"5a5bfa2f24d14a0001997690","origFileName":"02-encapsuladofv-cubierta-de-ixtle.jpg","fileName":"02-encapsuladofv-cubierta-de-ixtle.jpg","fileSize":90080,"height":660,"url":"/assets/images/02-encapsuladofv-cubierta-de-ixtle.jpg","width":800,"caption":"Techo de encapsulado FV de Ixtle","type":"image"}],"group":""}</script>
         </a>
       </div>
       <div class="div-ventajas">
-        <h3 class="heading-3 ventajas">{{ texts.2a69196 }}</h3>
+        <h3 class="heading-3 ventajas">{{ texts.-24500ddb }}</h3>
         <ul role="list" class="unordered-list">
           <li class="list-item">{{ texts.2bde318c }}</li>
           <li class="list-item">{{ texts.-cc92c32 }}</li>
@@ -132,24 +131,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div id="encapsulados" class="section-encapsulados wf-section">
     <div class="div-container">
-      <div class="image-thumbnail-redondo encapsulado"></div>{%- image images.-27bd18ad.url, images.-27bd18ad.alt, '[{"max":10000,"size":"100vw"}]', 'class="imagen-techos"' -%}
+      <div class="image-thumbnail-redondo encapsulado"></div>{%- image images.-27bd18ad.url, images.-27bd18ad.alt, '[{"max":960,"size":"100vw"},{"max":10000,"size":"960px"}]', 'class="imagen-techos"' -%}
       <h2 class="heading-2 center">{{ texts.2dad06fd }}</h2>
       <p class="paragraph dark big center">{{ texts.-d3b99d0 }}</p>
       <p class="paragraph dark medium center">{{ texts.-1c3cbf4a }}</p>
       <p class="paragraph dark medium center">{{ texts.-14a31c0 }}</p>
       <a target="_blank" href="{{ links.-5d1a6568 }}" class="link-text big-underline">{{ texts.579a8dd2 }}</a>
       <div class="div-galeria-encapsulados">
-        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.707c2929.url, images.707c2929.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
-          <script type="application/json" class="w-json">{"items":[{"type":"image","_id":"5a74dec05514460001eb9236","fileName":"techo-encapsulado-pergola_01.JPG","origFileName":"techo-encapsulado-pergola_01.JPG","width":700,"height":700,"fileSize":71821,"url":"/assets/images/techo-encapsulado-pergola_01.JPG"}],"group":"encapsulados"}</script>
+        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.707c2929.url, images.707c2929.alt, '[{"max":479,"size":"29vw"},{"max":991,"size":"23vw"},{"max":10000,"size":"220.796875px"}]', '' -%}
+          <script type="application/json" class="w-json">{"items":[{"_id":"5a74dec05514460001eb9236","origFileName":"techo-encapsulado-pergola_01.JPG","fileName":"techo-encapsulado-pergola_01.JPG","fileSize":71821,"height":700,"url":"/assets/images/techo-encapsulado-pergola_01.JPG","width":700,"type":"image"}],"group":"encapsulados"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.708a40aa.url, images.708a40aa.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
-          <script type="application/json" class="w-json">{"items":[{"type":"image","_id":"5a74dec05514460001eb9237","fileName":"techo-encapsulado-pergola_02.JPG","origFileName":"techo-encapsulado-pergola_02.JPG","width":700,"height":700,"fileSize":90208,"url":"/assets/images/techo-encapsulado-pergola_02.JPG"}],"group":"encapsulados"}</script>
+        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.708a40aa.url, images.708a40aa.alt, '[{"max":479,"size":"29vw"},{"max":991,"size":"23vw"},{"max":10000,"size":"220.796875px"}]', '' -%}
+          <script type="application/json" class="w-json">{"items":[{"_id":"5a74dec05514460001eb9237","origFileName":"techo-encapsulado-pergola_02.JPG","fileName":"techo-encapsulado-pergola_02.JPG","fileSize":90208,"height":700,"url":"/assets/images/techo-encapsulado-pergola_02.JPG","width":700,"type":"image"}],"group":"encapsulados"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.7098582b.url, images.7098582b.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
-          <script type="application/json" class="w-json">{"items":[{"type":"image","_id":"5a74dec0681ad20001def25c","fileName":"techo-encapsulado-pergola_03.JPG","origFileName":"techo-encapsulado-pergola_03.JPG","width":700,"height":700,"fileSize":69188,"url":"/assets/images/techo-encapsulado-pergola_03.JPG"}],"group":"encapsulados"}</script>
+        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.7098582b.url, images.7098582b.alt, '[{"max":479,"size":"29vw"},{"max":991,"size":"23vw"},{"max":10000,"size":"220.796875px"}]', '' -%}
+          <script type="application/json" class="w-json">{"items":[{"_id":"5a74dec0681ad20001def25c","origFileName":"techo-encapsulado-pergola_03.JPG","fileName":"techo-encapsulado-pergola_03.JPG","fileSize":69188,"height":700,"url":"/assets/images/techo-encapsulado-pergola_03.JPG","width":700,"type":"image"}],"group":"encapsulados"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.70a66fac.url, images.70a66fac.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
-          <script type="application/json" class="w-json">{"items":[{"type":"image","_id":"5a74dec0681ad20001def25d","fileName":"techo-encapsulado-pergola_04.JPG","origFileName":"techo-encapsulado-pergola_04.JPG","width":700,"height":700,"fileSize":96654,"url":"/assets/images/techo-encapsulado-pergola_04.JPG"}],"group":"encapsulados"}</script>
+        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.70a66fac.url, images.70a66fac.alt, '[{"max":479,"size":"29vw"},{"max":991,"size":"23vw"},{"max":10000,"size":"220.796875px"}]', '' -%}
+          <script type="application/json" class="w-json">{"items":[{"_id":"5a74dec0681ad20001def25d","origFileName":"techo-encapsulado-pergola_04.JPG","fileName":"techo-encapsulado-pergola_04.JPG","fileSize":96654,"height":700,"url":"/assets/images/techo-encapsulado-pergola_04.JPG","width":700,"type":"image"}],"group":"encapsulados"}</script>
         </a>
       </div>
     </div>
@@ -161,8 +160,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark big center">{{ texts.1068f93b }}</p>
       <p class="paragraph dark medium center">{{ texts.7d9e9bcc }}</p>
       <p class="paragraph dark medium center">{{ texts.-56ac4c60 }}</p>
-      <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.4d1c4a4b.url, images.4d1c4a4b.alt, '[{"max":991,"size":"100vw"},{"max":10000,"size":"960.0000610351562px"}]', 'class="image"' -%}
-        <script type="application/json" class="w-json">{"items":[{"width":933,"caption":"Techo de policarbonato","height":507,"fileName":"01pergolado-con-policarbonato.jpg","origFileName":"01pergolado-con-policarbonato.jpg","url":"/assets/images/01pergolado-con-policarbonato.jpg","_id":"5a5bfbc311f84b0001e9344c","type":"image","fileSize":78297},{"width":472,"caption":"Techo de policarbonato","height":543,"fileName":"02pergolado-con-policarbonato.jpg","origFileName":"02pergolado-con-policarbonato.jpg","url":"/assets/images/02pergolado-con-policarbonato.jpg","_id":"5a5bfbc324d14a00019976c9","type":"image","fileSize":53987}]}</script>
+      <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.4d1c4a4b.url, images.4d1c4a4b.alt, '[{"max":991,"size":"100vw"},{"max":10000,"size":"960px"}]', 'class="image"' -%}
+        <script type="application/json" class="w-json">{"items":[{"_id":"5a5bfbc311f84b0001e9344c","origFileName":"01pergolado-con-policarbonato.jpg","fileName":"01pergolado-con-policarbonato.jpg","fileSize":78297,"height":507,"url":"/assets/images/01pergolado-con-policarbonato.jpg","width":933,"caption":"Techo de policarbonato","type":"image"},{"_id":"5a5bfbc324d14a00019976c9","origFileName":"02pergolado-con-policarbonato.jpg","fileName":"02pergolado-con-policarbonato.jpg","fileSize":53987,"height":543,"url":"/assets/images/02pergolado-con-policarbonato.jpg","width":472,"caption":"Techo de policarbonato","type":"image"}],"group":""}</script>
       </a>
       <div class="div-ventajas">
         <h3 class="heading-3 ventajas">{{ texts.67f8d8e3 }}</h3>
@@ -182,7 +181,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="image-thumbnail-redondo vidriotemplado"></div>
       <p class="paragraph dark big center">{{ texts.-43a12695 }}</p>
       <p class="paragraph dark medium center">{{ texts.-8d0923b }}</p>
-      <p class="paragraph dark medium center">{{ texts.-7cc7e195 }}</p>{%- image images.6bc09a80.url, images.6bc09a80.alt, '[{"max":10000,"size":"100vw"}]', 'class="div-horizontal-con-espacio-superior"' -%}
+      <p class="paragraph dark medium center">{{ texts.-7cc7e195 }}</p>{%- image images.6bc09a80.url, images.6bc09a80.alt, '[{"max":960,"size":"100vw"},{"max":10000,"size":"960px"}]', 'class="div-horizontal-con-espacio-superior"' -%}
       <div class="div-ventajas">
         <h3 class="heading-3 ventajas">{{ texts.411adaeb }}</h3>
         <ul role="list" class="unordered-list">
@@ -203,7 +202,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark big center">{{ texts.-7880ebf9 }}</p>
       <p class="paragraph dark medium center">{{ texts.2d1ff684 }}</p>
       <p class="paragraph dark medium center">{{ texts.29a0da1f }}</p>
-      <p class="paragraph dark medium center">{{ texts.-5762c67a }}</p>{%- image images.81bf26.url, images.81bf26.alt, '[{"max":10000,"size":"100vw"}]', 'class="div-horizontal-con-espacio-superior"' -%}
+      <p class="paragraph dark medium center">{{ texts.-5762c67a }}</p>{%- image images.81bf26.url, images.81bf26.alt, '[{"max":960,"size":"100vw"},{"max":10000,"size":"960px"}]', 'class="div-horizontal-con-espacio-superior"' -%}
       <div class="div-ventajas">
         <h3 class="heading-3 ventajas">{{ texts.-128a4b63 }}</h3>
         <ul role="list" class="unordered-list">
