--- a/theme/[pisos].html
+++ b/theme/[pisos].html
@@ -27,7 +27,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=606c63411ec66e0011e92e6d&product=sop' async='async'></script>
+  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
@@ -85,6 +85,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a599-e2114c95">
         <div class="imagen-thumbnail-piso">{%- image f_foto-principal-de-producto.url, f_foto-principal-de-producto.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":10000,"size":"98vw"}]', 'class="image-6"' -%}</div>
       </div>
+    </div>
+    {%- assign collection = collections.categoria -%}<div class="w-dyn-list">
+      {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo w-dyn-items">
+        {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-catalogo w-dyn-item">
+          <a href="{{ item.url }}" class="link-block-5link-block-5 w-inline-block">
+            <div class="imagen-boton-redondo-2 catalogo-ingenieria" style="background-image: url('{{item.data.f_imagen.url}}');"></div>
+          </a>
+          <h2 class="h2-small">{{ item.data.title }}</h2>
+          <p class="paragraph dark small center">{{ item.data.f_descripcion }}</p>
+          <a href="{{ item.url }}" class="boton hide w-button">{{ texts.-72aeb621 }}</a>
+          <a href="{{ item.url }}" class="boton w-button">{{ texts.-50fd480d }}</a>
+        </div>{%- endfor -%}
+      </div>{%- endunless -%}
+      {%- if collection.length == 0 -%}<div class="w-dyn-empty">
+        <div>{{ texts.3d503d2b }}</div>
+      </div>{%- endif -%}
     </div>
   </div>
   {%- include "partials/footer" -%}
