--- a/theme/portafolio.html
+++ b/theme/portafolio.html
@@ -34,7 +34,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
   <meta name="keywords" content="portafolio de proyectos">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
@@ -57,7 +56,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
         <div class="div-50">
-          <div class="div-block-proyecto">{%- image images.101b7157.url, images.101b7157.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.9930725097656px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.9930725097656px"}]', '' -%}</div>
+          <div class="div-block-proyecto">{%- image images.101b7157.url, images.101b7157.alt, '[{"max":10000,"size":"100vw"}]', '' -%}</div>
         </div>
       </div>
       <div class="div-horizontal">
@@ -71,7 +70,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
         <div class="div-50">
-          <div class="div-block-proyecto">{%- image images.440424d0.url, images.440424d0.alt, '[{"max":479,"size":"92vw"},{"max":10000,"size":"258.9930725097656px"}]', '' -%}</div>
+          <div class="div-block-proyecto">{%- image images.440424d0.url, images.440424d0.alt, '[{"max":10000,"size":"100vw"}]', '' -%}</div>
         </div>
       </div>
       <div class="div-horizontal">
@@ -79,14 +78,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-proyecto">
             <h2 class="heading-2">{{ texts.-78e33b5a }}</h2>
             <p class="paragraph dark medium">{{ texts.-3a8c64c7 }}</p>
-            <div class="div-block-14 fullwidth">{%- image images.-6f61b41d.url, images.-6f61b41d.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"92vw"},{"max":991,"size":"45vw"},{"max":10000,"size":"440.0000305175781px"}]', 'class="img-columnas"' -%}{%- image images.-6f539c9c.url, images.-6f539c9c.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"92vw"},{"max":991,"size":"45vw"},{"max":10000,"size":"440.0000305175781px"}]', 'class="img-columnas"' -%}</div>
+            <div class="div-block-14 fullwidth">{%- image images.-6f61b41d.url, images.-6f61b41d.alt, '[{"max":479,"size":"92vw"},{"max":10000,"size":"300.484375px"}]', 'class="img-columnas"' -%}{%- image images.-6f539c9c.url, images.-6f539c9c.alt, '[{"max":479,"size":"92vw"},{"max":10000,"size":"300.484375px"}]', 'class="img-columnas"' -%}</div>
           </div>
         </div>
         <div class="div-50">
           <div class="div-block-proyecto">
             <h2 class="heading-2">{{ texts.-3e3c9f6b }}</h2>
             <p class="paragraph dark medium">{{ texts.-6036b884 }}</p>
-            <div class="div-block-14 fullwidth">{%- image images.-7c8c5a3b.url, images.-7c8c5a3b.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"92vw"},{"max":991,"size":"45vw"},{"max":10000,"size":"440.0000305175781px"}]', 'class="img-columnas"' -%}{%- image images.61af75e0.url, images.61af75e0.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"92vw"},{"max":991,"size":"45vw"},{"max":10000,"size":"440.0000305175781px"}]', 'class="img-columnas"' -%}{%- image images.278f32a7.url, images.278f32a7.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"92vw"},{"max":991,"size":"45vw"},{"max":10000,"size":"440.0000305175781px"}]', 'class="img-columnas"' -%}{%- image images.48ee67ce.url, images.48ee67ce.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"92vw"},{"max":991,"size":"45vw"},{"max":10000,"size":"440.0000305175781px"}]', 'class="img-columnas"' -%}</div>
+            <div class="div-block-14 fullwidth">{%- image images.-7c8c5a3b.url, images.-7c8c5a3b.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.828125px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.828125px"}]', 'class="img-columnas"' -%}{%- image images.61af75e0.url, images.61af75e0.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.828125px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.828125px"}]', 'class="img-columnas"' -%}{%- image images.278f32a7.url, images.278f32a7.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.828125px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.828125px"}]', 'class="img-columnas"' -%}{%- image images.48ee67ce.url, images.48ee67ce.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.828125px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.828125px"}]', 'class="img-columnas"' -%}</div>
           </div>
         </div>
       </div>
