--- a/theme/saunas.html
+++ b/theme/saunas.html
@@ -34,7 +34,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
   <meta name="keywords" content="saunas, sauna de madera">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
@@ -73,8 +72,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark medium center">{{ texts.524692bc }}</p>
       <a href="{{ links.23 }}" class="boton-naranja w-button">{{ texts.2e35f721 }}</a>
       <div class="div-galeria-2-column">
-        <div class="div-block-14">{%- image images.3cfaef50.url, images.3cfaef50.alt, '[{"max":479,"size":"46vw"},{"max":991,"size":"47vw"},{"max":10000,"size":"460.0000305175781px"}]', 'class="img-columnas"' -%}{%- image images.3d171e52.url, images.3d171e52.alt, '[{"max":479,"size":"46vw"},{"max":991,"size":"47vw"},{"max":10000,"size":"460.0000305175781px"}]', 'class="img-columnas"' -%}</div>
-        <div class="div-block-14">{%- image images.3d0906d1.url, images.3d0906d1.alt, '[{"max":479,"size":"46vw"},{"max":991,"size":"47vw"},{"max":10000,"size":"435.0000305175781px"}]', 'width="435" class="img-columnas"' -%}{%- image images.3d2535d3.url, images.3d2535d3.alt, '[{"max":479,"size":"46vw"},{"max":991,"size":"47vw"},{"max":10000,"size":"435.0000305175781px"}]', 'width="435" class="img-columnas"' -%}</div>
+        <div class="div-block-14">{%- image images.3cfaef50.url, images.3cfaef50.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'class="img-columnas"' -%}{%- image images.3d171e52.url, images.3d171e52.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'class="img-columnas"' -%}</div>
+        <div class="div-block-14">{%- image images.3d0906d1.url, images.3d0906d1.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'width="435" class="img-columnas"' -%}{%- image images.3d2535d3.url, images.3d2535d3.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'width="435" class="img-columnas"' -%}</div>
       </div>
     </div>
   </div>
